# GC-Setup

./: .gitignore  BUGFIXES.md  FEDORA_FOCUS.md  INSTALL.md  README.md  install-minimal.sh  install.sh  io.github.gcsetup.GCSetup.yml  io.github.gcsetup.GCSetup.yml~  meson.build  meson_post_install.py
data/: gc-setup.in  io.github.gcsetup.GCSetup.appdata.xml  io.github.gcsetup.GCSetup.desktop
src/: __init__.py  __main__.py  main.py  window.py
src/data/: apps.json  catalog.json  extensions.json  misc.json
src/installer/: __init__.py  appimage.py  detection.py  dialog.py  extensions.py  flatpak.py  native.py
src/pages/: __init__.py  apps_page.py  category_page.py  extensions_page.py  misc_page.py  system_tweaks_page.py
